--- a/en.lproj/simplefm.xib
+++ b/en.lproj/simplefm.xib
@@ -273,7 +273,7 @@
 			</object>
 		</object>
 		<int key="IBDocument.localizationMode">0</int>
-		<string key="IBDocument.LastKnownRelativeProjectPath">HelloWorld.xcodeproj</string>
+		<string key="IBDocument.LastKnownRelativeProjectPath">simplefm.xcodeproj</string>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
 	</data>
 </archive>
