--- a/en.lproj/simplefm.xib
+++ b/en.lproj/simplefm.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9059" systemVersion="15A284" targetRuntime="iOS.CocoaTouch" variant="6xAndEarlier" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9059" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" variant="6xAndEarlier" propertyAccessControl="none">
     <dependencies>
         <deployment version="1552" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
@@ -46,7 +46,18 @@
                     <animations/>
                     <state key="normal" title="Note on"/>
                     <connections>
-                        <action selector="play:" destination="-1" eventType="touchUpInside" id="Wyi-01-Xje"/>
+                        <action selector="playAIFF:" destination="-1" eventType="touchUpInside" id="877-mK-ZvJ"/>
+                    </connections>
+                </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="DJo-MU-uM5">
+                    <rect key="frame" x="114" y="156" width="94" height="44"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <animations/>
+                    <state key="normal" title="Sine Tone"/>
+                    <connections>
+                        <action selector="play:" destination="-1" eventType="touchDown" id="tST-EU-eyH"/>
+                        <action selector="stop:" destination="-1" eventType="touchUpInside" id="Lez-gA-MrK"/>
+                        <action selector="stop:" destination="-1" eventType="touchUpOutside" id="tzq-NZ-QsM"/>
                     </connections>
                 </button>
             </subviews>
