--- a/en.lproj/simplefm.xib
+++ b/en.lproj/simplefm.xib
@@ -8,8 +8,10 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MyViewController">
             <connections>
                 <outlet property="label" destination="40" id="52"/>
+                <outlet property="stepperBPM" destination="iNd-ON-ScP" id="598-FO-eVV"/>
+                <outlet property="textBPM" destination="OFR-zd-AaY" id="elB-zF-JGw"/>
                 <outlet property="textField" destination="58" id="60"/>
-                <outlet property="view" destination="24" id="35"/>
+                <outlet property="view" destination="24" id="TPd-gP-tHb"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -60,18 +62,24 @@
                         <action selector="stop:" destination="-1" eventType="touchUpOutside" id="tzq-NZ-QsM"/>
                     </connections>
                 </button>
-                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="BPM" textAlignment="center" minimumFontSize="17" id="OFR-zd-AaY">
+                <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="30" minimumValue="30" maximumValue="300" stepValue="0.10000000000000001" id="iNd-ON-ScP" userLabel="BPMStepper">
+                    <rect key="frame" x="114" y="378" width="94" height="27"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <animations/>
+                    <connections>
+                        <action selector="stepperBPMAction:" destination="-1" eventType="valueChanged" id="ano-cw-gQF"/>
+                    </connections>
+                </stepper>
+                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="BPM" textAlignment="center" minimumFontSize="17" id="OFR-zd-AaY" userLabel="BPMText">
                     <rect key="frame" x="111" y="333" width="97" height="30"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <animations/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits"/>
+                    <connections>
+                        <outlet property="delegate" destination="-1" id="N5N-W0-EYP"/>
+                    </connections>
                 </textField>
-                <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="30" minimumValue="30" maximumValue="300" stepValue="0.10000000000000001" id="iNd-ON-ScP">
-                    <rect key="frame" x="114" y="378" width="94" height="27"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <animations/>
-                </stepper>
             </subviews>
             <animations/>
             <color key="backgroundColor" white="0.5" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
