--- a/simplefm/simplefm/Classes/View/Base.lproj/MainView.xib
+++ b/simplefm/simplefm/Classes/View/Base.lproj/MainView.xib
@@ -1,100 +1,22 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9059" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9059" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <deployment version="1792" identifier="iOS"/>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MainViewController" customModule="simplefm" customModuleProvider="target">
             <connections>
-                <outlet property="label" destination="40" id="52"/>
-                <outlet property="stepperBPM" destination="iNd-ON-ScP" id="598-FO-eVV"/>
-                <outlet property="textBPM" destination="OFR-zd-AaY" id="elB-zF-JGw"/>
-                <outlet property="textField" destination="58" id="60"/>
-                <outlet property="view" destination="24" id="HP2-4R-DhF"/>
+                <outlet property="view" destination="iN0-l3-epB" id="lKG-lT-sPn"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="24">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
-            <autoresizingMask key="autoresizingMask" flexibleMaxY="YES"/>
-            <subviews>
-                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" text="" textAlignment="center" lineBreakMode="tailTruncation" minimumFontSize="20" id="40">
-                    <rect key="frame" x="20" y="104" width="280" height="44"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                    <animations/>
-                    <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="24"/>
-                    <color key="textColor" white="0.74596768999999996" alpha="0.99000001000000004" colorSpace="calibratedWhite"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <textField opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Hello, World!" clearsOnBeginEditing="YES" minimumFontSize="17" id="58">
-                    <rect key="frame" x="44" y="32" width="232" height="31"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <animations/>
-                    <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="17"/>
-                    <textInputTraits key="textInputTraits" autocapitalizationType="words" keyboardType="alphabet" returnKeyType="done"/>
-                    <connections>
-                        <outlet property="delegate" destination="-1" id="59"/>
-                    </connections>
-                </textField>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="kEL-N9-INb">
-                    <rect key="frame" x="121" y="99" width="55" height="30"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <animations/>
-                    <state key="normal" title="Note on"/>
-                    <connections>
-                        <action selector="playAIFF:" destination="-1" eventType="touchUpInside" id="877-mK-ZvJ"/>
-                    </connections>
-                </button>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="DJo-MU-uM5">
-                    <rect key="frame" x="114" y="156" width="68" height="30"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <animations/>
-                    <state key="normal" title="Sine Tone"/>
-                    <connections>
-                        <action selector="play:" destination="-1" eventType="touchDown" id="Gaw-42-nKZ"/>
-                    </connections>
-                </button>
-                <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="30" minimumValue="30" maximumValue="300" stepValue="0.10000000000000001" id="iNd-ON-ScP" userLabel="BPMStepper">
-                    <rect key="frame" x="114" y="378" width="94" height="23"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <animations/>
-                    <connections>
-                        <action selector="stepperBPMAction:" destination="-1" eventType="valueChanged" id="ano-cw-gQF"/>
-                    </connections>
-                </stepper>
-                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="BPM" textAlignment="center" minimumFontSize="17" id="OFR-zd-AaY" userLabel="BPMText">
-                    <rect key="frame" x="111" y="333" width="97" height="30"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <animations/>
-                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                    <textInputTraits key="textInputTraits"/>
-                    <connections>
-                        <outlet property="delegate" destination="-1" id="N5N-W0-EYP"/>
-                    </connections>
-                </textField>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="J95-Wg-Ykj">
-                    <rect key="frame" x="131" y="218" width="32" height="30"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <animations/>
-                    <state key="normal" title="Stop"/>
-                    <connections>
-                        <action selector="stop:" destination="-1" eventType="touchDown" id="Qbj-f7-FAA"/>
-                    </connections>
-                </button>
-                <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="69" minValue="30" maxValue="127" id="DaR-TS-9B1" userLabel="frequencySlider">
-                    <rect key="frame" x="18" y="279" width="284" height="37"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <animations/>
-                    <connections>
-                        <action selector="frequencyAction:" destination="-1" eventType="valueChanged" id="y1X-Ss-GaY"/>
-                    </connections>
-                </slider>
-            </subviews>
+        <view contentMode="scaleToFill" id="iN0-l3-epB">
+            <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <animations/>
-            <color key="backgroundColor" white="0.5" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-            <nil key="simulatedStatusBarMetrics"/>
-            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <point key="canvasLocation" x="517" y="232"/>
         </view>
     </objects>
 </document>
